@@ -11,30 +11,51 @@ import java.security.interfaces.RSAPublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64.Decoder;
 
 import io.doraemon.conf.Config;
+import io.doraemon.exception.DoraemonRuntimeException;
 import io.doraemon.logging.Logger;
 import io.doraemon.logging.LoggerFactory;
-import sun.misc.BASE64Decoder;
 
 public class RSAConfig {
 	private static Logger logger = LoggerFactory.getLogger(RSAConfig.class);
-	public static RSAPublicKey rsaPublicKey;
-	public static RSAPrivateKey rsaPrivateKey;
+	private RSAPublicKey publicKey;
+	private RSAPrivateKey privateKey;
 	private String rsaPublicKeyFile;
 	private String rsaPrivateKeyFile;
 	
-	private RSAConfig(String rsaPublicKeyFile, String rsaPrivateKeyFile) {
-		super();
-		this.rsaPublicKeyFile = rsaPublicKeyFile;
-		this.rsaPrivateKeyFile = rsaPrivateKeyFile;
+	private void load() {
+		try {
+			loadPublicKey(rsaPublicKeyFile);
+			loadPrivateKey(rsaPrivateKeyFile);
+		} catch (Exception e) {
+			throw new DoraemonRuntimeException(e);
+		}
+		
 	}
 	private static RSAConfig config;
 	public static RSAConfig getConfig(){
 		return config;
 	}
+	
+	public RSAPublicKey getPublicKey() {
+		return publicKey;
+	}
 
-	public static void loadPublicKey(String publicKeyFile) throws Exception{
+	public void setPublicKey(RSAPublicKey publicKey) {
+		this.publicKey = publicKey;
+	}
+
+	public RSAPrivateKey getPrivateKey() {
+		return privateKey;
+	}
+
+	public void setPrivateKey(RSAPrivateKey privateKey) {
+		this.privateKey = privateKey;
+	}
+
+	private void loadPublicKey(String publicKeyFile) throws Exception{
 		try {
 			BufferedReader br= new BufferedReader(
 					new InputStreamReader(new FileInputStream(publicKeyFile)));
@@ -48,7 +69,7 @@ public class RSAConfig {
 					sb.append('\r');
 				}
 			}
-			rsaPublicKey = toPublicKey(sb.toString());
+			publicKey = toPublicKey(sb.toString());
 		} catch (IOException |NullPointerException e) {
 			logger.info("can not load public key", e);
 			throw new Exception("can not load public key",e);
@@ -61,14 +82,14 @@ public class RSAConfig {
 	 * @param publicKeyStr 公钥数据字符串
 	 * @throws Exception 加载公钥时产生的异常
 	 */
-	public static RSAPublicKey toPublicKey(String publicKeyStr) throws Exception{
+	private RSAPublicKey toPublicKey(String publicKeyStr) throws Exception{
 		try {
-			BASE64Decoder base64Decoder= new BASE64Decoder();
-			byte[] buffer= base64Decoder.decodeBuffer(publicKeyStr);
+			Decoder base64Decoder= java.util.Base64.getMimeDecoder();
+			byte[] buffer= base64Decoder.decode(publicKeyStr);
 			KeyFactory keyFactory= KeyFactory.getInstance("RSA");
 			X509EncodedKeySpec keySpec= new X509EncodedKeySpec(buffer);
 			return (RSAPublicKey) keyFactory.generatePublic(keySpec);
-		} catch (NoSuchAlgorithmException|InvalidKeySpecException|IOException|NullPointerException e) {
+		} catch (NoSuchAlgorithmException|InvalidKeySpecException|NullPointerException e) {
 			logger.info("can not generate public key", e);
 			throw new Exception("can not generate public key",e);
 		} 
@@ -80,7 +101,7 @@ public class RSAConfig {
 	 * @return 是否成功
 	 * @throws Exception 
 	 */
-	public static void loadPrivateKey(String privateKeyFile) throws Exception{
+	private void loadPrivateKey(String privateKeyFile) throws Exception{
 		try {
 			BufferedReader br= new BufferedReader(new InputStreamReader(new FileInputStream(privateKeyFile)));
 			String readLine= null;
@@ -90,58 +111,49 @@ public class RSAConfig {
 					continue;
 				}else{
 					sb.append(readLine);
-					sb.append('\r');
+					//sb.append('\r');
 				}
 			}
-			rsaPrivateKey = toPrivateKey(sb.toString());
+			String str = sb.toString();
+			str = str.replace("\r\n", "");
+			privateKey = toPrivateKey(str);
 		} catch (IOException |NullPointerException e) {
 			logger.info("can not load private key", e);
 			throw new Exception("can not load private key",e);
 		} 
 	}
  
-	public static RSAPrivateKey toPrivateKey(String privateKeyStr) throws Exception{
+	private RSAPrivateKey toPrivateKey(String privateKeyStr) throws Exception{
 		try {
-			BASE64Decoder base64Decoder= new BASE64Decoder();
-			byte[] buffer= base64Decoder.decodeBuffer(privateKeyStr);
+			Decoder base64Decoder= java.util.Base64.getDecoder();
+			byte[] buffer= base64Decoder.decode(privateKeyStr);
 			PKCS8EncodedKeySpec keySpec= new PKCS8EncodedKeySpec(buffer);
 			KeyFactory keyFactory= KeyFactory.getInstance("RSA");
 			return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
-		} catch (NoSuchAlgorithmException|InvalidKeySpecException|IOException|NullPointerException e) {
+		} catch (NoSuchAlgorithmException|InvalidKeySpecException|NullPointerException e) {
 			logger.info("can not generatre private key", e);
 			throw new Exception("can not generatre private key",e);
 		}
 	}
 	public static void init() throws Exception{
-		config = Config.getConfig().readConf("token.conf", RSAConfig.class);
-		RSAConfig.loadPublicKey(config.rsaPublicKeyFile);
-		RSAConfig.loadPrivateKey(config.rsaPrivateKeyFile);
+		config = Config.getConfig().readConf("rsa.conf", RSAConfig.class);
+		config.load();
 	}
 	
 	public static void init(String confFile) throws Exception{
 		config = Config.getConfig().readConf(confFile, RSAConfig.class);
-		RSAConfig.loadPublicKey(config.rsaPublicKeyFile);
-		RSAConfig.loadPrivateKey(config.rsaPrivateKeyFile);
+		config.load();
 	}
 	
 	public static void main(String[] args){
 		//加载公钥
 		try {
-			RSAConfig.loadPublicKey("d:\\public.key");
-			System.out.println("加载公钥成功");
+			Config.init("/Users/lihanhui/work-banma/etc/conf");
+			init("/rsa.conf");
+			System.out.println("加载秘钥成功");
 		} catch (Exception e) {
 			System.err.println(e.getMessage());
-			System.err.println("加载公钥失败");
+			System.err.println("加载秘钥失败");
 		}
- 
-		//加载私钥
-		try {
-			RSAConfig.loadPrivateKey("d:\\pkcs8_rsa_private.key");
-			System.out.println("加载私钥成功");
-		} catch (Exception e) {
-			System.err.println(e.getMessage());
-			System.err.println("加载私钥失败");
-		}
- 
 	}
 }
